WIP fix table spacing and answer borders during quiz creation

--- a/src/Styles/Components.css
+++ b/src/Styles/Components.css
@@ -5,7 +5,7 @@
     --lightGreen: rgba(103, 194, 124, 255);
     --warning: rgba(255, 89, 100, 255);
     --darkMediumBlue: rgba(48, 86, 211, 255);
-    --lightGray: rgba(241,246,252,255);
+    --lightGray: rgba(241, 246, 252, 255);
 
 }
 
@@ -190,4 +190,10 @@ Button.button-darkMediumBlue {
 
 .MuiButton-root:hover {
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+
+.QuestionsAndAnswers .trash-icon,
+.QuestionsAndAnswers .pencil-icon {
+  margin-right: 10px; /* Adjust the margin-right as needed to move the icons to the right. */
 }
